project and code cleanup